examples/negative/pipes/pipe_ambiguous/main.kai
# Issue #594 ŌĆö both `mod_a` and `mod_b` export `pub type Source`.
# The user pipes against an LHS whose head resolves to `Source`,
# leaving the typer ambiguous about which module's `map` to dispatch.
# Diagnostic must list both modules and ask for a qualified type.

import mod_a
import mod_b

fn main() : Int {
  let s = MkSrcA(7)
  let r = s | (n) => n + 1
  0
}
